# daskr

./: .gitignore  README.md  api-doc-ford.md  codecov.yml  fpm.rsp  fpm.toml  meson.build  meson.options
.github/workflows/: pages.yml  test.yml
example/: dkrdem.f  example_heat.f90  example_heatilu.f90  example_krdem1.f90  example_web.f90  meson.build
src/: blas_interfaces.f90  daskr.f  daskr_banpre.f90  daskr_ilupre.f90  daskr_kinds.F90  daskr_new.f90  daskr_rbdpre.f90  daskr_rbgpre.f90  dblas.f  dlinpack.f  dsparskit.f  linpack.f90
test/: meson.build  test_krdem1.f90  test_krdem2.f90
